[update] .travis.yml
  - tlmgr install collection-basic: Essential programs and files
  - tlmgr install collection-bibtexextra: BibTeX additional styles
  - tlmgr install collection-binextra: TeX auxiliary programs
  - tlmgr install collection-fontutils: Graphics and font utilities
  - tlmgr install collection-formatsextra: Additional formats
  - tlmgr install collection-humanities: Humanities packages
  - tlmgr install collection-langenglish: US and UK English
  - tlmgr install collection-langgerman: German
  - tlmgr install collection-latex: LaTeX fundamental packages
  - tlmgr install collection-latexextra: LaTeX additional packages
  - tlmgr install collection-latexrecommended: LaTeX recommended packages
  - tlmgr install collection-luatex: LuaTeX packages
  - tlmgr install collection-mathscience: Mathematics, natural sciences, computer science packages
  - tlmgr install collection-pictures: Graphics, pictures, diagrams
  - tlmgr install collection-plaingeneric: Plain (La)TeX packages
  - tlmgr install collection-pstricks: PSTricks

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,22 @@ dist: trusty
 language: r
 cache: packages
 before_install:
-  - tlmgr install index
+  - tlmgr install collection-basic
+  - tlmgr install collection-bibtexextra
+  - tlmgr install collection-binextra
+  - tlmgr install collection-fontutils
+  - tlmgr install collection-formatsextra
+  - tlmgr install collection-humanities
+  - tlmgr install collection-langenglish
+  - tlmgr install collection-langgerman
+  - tlmgr install collection-latex
+  - tlmgr install collection-latexextra
+  - tlmgr install collection-latexrecommended
+  - tlmgr install collection-luatex
+  - tlmgr install collection-mathscience
+  - tlmgr install collection-pictures
+  - tlmgr install collection-plaingeneric
+  - tlmgr install collection-pstricks
 install:
 script:
 - mkdir _build
