--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 dist: trusty
 before_install:
-  - sudo sh installR.sh
+  - sh installR.sh
 install:
   - tlmgr install collection-basic
   - tlmgr install collection-bibtexextra
