--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ sudo: required
 dist: trusty
 env:
   global:
-    - BOOTSTRAP_LATEX="1"  
+    - BOOTSTRAP_LATEX="1"
 before_install:
-  - chmod 755 ./installR.sh
-  - ./installR.sh bootstrap
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
 install:
   - ./travis-tool.sh install_deps
   - tlmgr install collection-basic
