--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 sudo: required
 dist: trusty
-env:
-  global:
-    - BOOTSTRAP_LATEX="1"
 before_install:
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+  - sudo add-apt-repository -y "ppa:texlive-backports/ppa"
+  - sudo apt-get install -y --no-install-recommends \
+        texlive-base texlive-latex-base texlive-generic-recommended \
+        texlive-fonts-recommended texlive-fonts-extra \
+        texlive-extra-utils texlive-latex-recommended texlive-latex-extra \
+        texinfo lmodern
 install:
-  - ./travis-tool.sh install_deps
   - tlmgr install collection-basic
   - tlmgr install collection-bibtexextra
   - tlmgr install collection-binextra
