--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: required
 dist: trusty
 before_install:
   - sudo add-apt-repository -y "ppa:texlive-backports/ppa"
+  - sudo apt-get update
+  - sudo apt-get upgrade
   - sudo apt-get install -y --no-install-recommends \
         texlive-base texlive-latex-base texlive-generic-recommended \
         texlive-fonts-recommended texlive-fonts-extra \
