--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 sudo: required
 dist: trusty
 before_install:
-  - sudo add-apt-repository -y "ppa:texlive-backports/ppa"
-  - sudo apt-get update
-  - sudo apt-get upgrade
+  - sudo add-apt-repository -y ppa:texlive-backports/ppa -y
+  - sudo apt-get update -q
   - sudo apt-get install -y --no-install-recommends \
         texlive-base texlive-latex-base texlive-generic-recommended \
         texlive-fonts-recommended texlive-fonts-extra \
