--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,7 @@ dist: trusty
 before_install:
   - sudo add-apt-repository -y ppa:texlive-backports/ppa -y
   - sudo apt-get update -q
-  - sudo apt-get install -y --no-install-recommends \
-        texlive-base texlive-latex-base texlive-generic-recommended \
-        texlive-fonts-recommended texlive-fonts-extra \
-        texlive-extra-utils texlive-latex-recommended texlive-latex-extra \
-        texinfo lmodern
+  - sudo apt-get install -y --no-install-recommends texlive-base texlive-latex-base texlive-generic-recommended texlive-fonts-recommended texlive-fonts-extra texlive-extra-utils texlive-latex-recommended texlive-latex-extra texinfo lmodern
 install:
   - tlmgr install collection-basic
   - tlmgr install collection-bibtexextra
