--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 dist: trusty
 before_install:
-  - sudo add-apt-repository -y ppa:texlive-backports/ppa -y
+  - sudo add-apt-repository ppa:texlive-backports/ppa -y
   - sudo apt-get update -q
   - sudo apt-get install -y --no-install-recommends texlive-base texlive-latex-base texlive-generic-recommended texlive-fonts-recommended texlive-fonts-extra texlive-extra-utils texlive-latex-recommended texlive-latex-extra texinfo lmodern
 install:
