--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 sudo: required
 dist: trusty
 before_install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo add-apt-repository ppa:texlive-backports/ppa -y
   - sudo apt-get update -q
-  - sudo apt-get install gcc-4.8 -y
+  - sudo apt-get install -y --no-install-recommends texlive-base texlive-latex-base texlive-generic-recommended texinfo lmodern
 install:
   - tlmgr install collection-basic
   - tlmgr install collection-bibtexextra
