--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 before_install:
   - sudo add-apt-repository ppa:jonathonf/texlive -y
   - sudo apt-get update -q
-  - sudo apt-get install -y --no-install-recommends texlive-base texlive-latex-base texlive-generic-recommended texinfo lmodern
+  - sudo apt-get install -y --no-install-recommends texlive-base texlive-latex-base xzdec
 install:
   - tlmgr install collection-basic
   - tlmgr install collection-bibtexextra
