--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ before_install:
   - sudo apt-get update -q
   - sudo apt-get install -y --no-install-recommends texlive-base texlive-latex-base xzdec
 install:
+  - mkdir ~/texmf
+  - tlmgr init-usertree
   - tlmgr install collection-basic
   - tlmgr install collection-bibtexextra
   - tlmgr install collection-binextra
