--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 before_install:
   - sudo apt-get install --reinstall texlive-base
 install:
-  - tlmgr install collection-basic
+  - sudo /opt/texbin/tlmgr install collection-basic
   - sudo tlmgr install collection-bibtexextra
   - sudo tlmgr install collection-binextra
   - sudo tlmgr install collection-langenglish
