--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 services:
   - docker
 before_install:
-  - docker pull blang/latex:ctanfull
+  - docker pull moorviper/dockerlatex
 install:
 script:
   - ./latexdockercmd.sh arara Main.tex -v
